--- a/countnumber.html
+++ b/countnumber.html
@@ -8,32 +8,57 @@
   body {
     font-family: Arial, sans-serif;
     text-align: center;
+    background-color: #f0f0f0;
+    padding-top: 50px;
+  }
+  .container {
+    max-width: 400px;
+    margin: 0 auto;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 30px;
   }
   #counter {
-    font-size: 24px;
+    font-size: 36px;
     margin-bottom: 20px;
+    color: #333;
   }
   input[type="number"] {
     font-size: 18px;
-    padding: 5px 10px;
+    padding: 10px;
     text-align: center;
     width: 80px;
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
   }
   button {
     font-size: 18px;
     margin: 0 10px;
-    padding: 5px 10px;
+    padding: 10px 20px;
     cursor: pointer;
+    background-color: #4CAF50;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+  }
+  button:hover {
+    background-color: #45a049;
   }
 </style>
 </head>
 <body>
 
-<div id="counter">0</div>
-<input type="number" id="countInput" min="0" value="0">
-<button id="setBtn">Set</button>
-<button id="plusBtn">+1</button>
-<button id="minusBtn">-1</button>
+<div class="container">
+  <div id="counter">0</div>
+  <input type="number" id="countInput" min="0" value="0">
+  <br>
+  <button id="setBtn">Set</button>
+  <button id="plusBtn">+1</button>
+  <button id="minusBtn">-1</button>
+</div>
 
 <script>
   const counter = document.getElementById('counter');
