--- a/countnumber.html
+++ b/countnumber.html
@@ -35,7 +35,7 @@
   }
   button {
     font-size: 18px;
-    margin: 0 10px;
+    margin-top: 10px;
     padding: 10px 20px;
     cursor: pointer;
     background-color: #4CAF50;
@@ -56,6 +56,7 @@
   <input type="number" id="countInput" min="0" value="0">
   <br>
   <button id="setBtn">Set</button>
+  <br>
   <button id="plusBtn">+1</button>
   <button id="minusBtn">-1</button>
 </div>
