--- a/countnumber.html
+++ b/countnumber.html
@@ -38,14 +38,14 @@
     margin-top: 10px;
     padding: 10px 20px;
     cursor: pointer;
-    background-color: #555;
+    background-color: #808080;
     color: #fff;
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     transition: background-color 0.3s;
   }
   button:hover {
-    background-color: #777;
+    background-color: #45a049;
   }
 </style>
 </head>
