--- a/countnumber.html
+++ b/countnumber.html
@@ -28,23 +28,24 @@
     font-size: 18px;
     padding: 10px;
     text-align: center;
+    width: 80px;
     margin-bottom: 20px;
     border: 1px solid #ddd;
     border-radius: 4px;
   }
   button {
-    font-size: 12px;
+    font-size: 18px;
     margin-top: 10px;
     padding: 10px 20px;
     cursor: pointer;
-    background-color: #808080;
+    background-color: #555;
     color: #fff;
     border: none;
-    border-radius: 10px;
+    border-radius: 4px;
     transition: background-color 0.3s;
   }
   button:hover {
-    background-color: #45a049;
+    background-color: #777;
   }
 </style>
 </head>
@@ -53,6 +54,7 @@
 <div class="container">
   <div id="counter">0</div>
   <input type="number" id="countInput" min="0" value="0">
+  <br>
   <button id="setBtn">Set</button>
   <br>
   <button id="plusBtn">+1</button>
@@ -66,7 +68,10 @@
   const plusBtn = document.getElementById('plusBtn');
   const minusBtn = document.getElementById('minusBtn');
 
-  let count = 0;
+  // 로컬 스토리지에서 값 불러오기
+  let count = localStorage.getItem('count') ? parseInt(localStorage.getItem('count')) : 0;
+
+  updateCounter();
 
   setBtn.addEventListener('click', () => {
     count = parseInt(countInput.value) || 0;
@@ -88,6 +93,8 @@
   function updateCounter() {
     counter.textContent = count;
     countInput.value = count;
+    // 로컬 스토리지에 값 저장
+    localStorage.setItem('count', count);
   }
 </script>
 
