--- a/countnumber.html
+++ b/countnumber.html
@@ -68,7 +68,7 @@
   const minusBtn = document.getElementById('minusBtn');
 
   // 초기 회원수 설정
-  let count = 100; // 예시로 100으로 설정
+  let count = 7000;
 
   updateCounter();
 
