--- a/countnumber.html
+++ b/countnumber.html
@@ -18,11 +18,19 @@
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  #counter-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
   }
   #counter {
     font-size: 36px;
-    margin-bottom: 20px;
     color: #333;
+    margin: 0 10px;
   }
   input[type="number"] {
     font-size: 18px;
@@ -35,7 +43,6 @@
   }
   button {
     font-size: 18px;
-    margin-top: 10px;
     padding: 10px 20px;
     cursor: pointer;
     background-color: #555;
@@ -52,12 +59,13 @@
 <body>
 
 <div class="container">
-  <div id="counter">0</div>
+  <div id="counter-container">
+    <button id="minusBtn">-1</button>
+    <div id="counter">0</div>
+    <button id="plusBtn">+1</button>
+  </div>
   <input type="number" id="countInput" min="0" value="0">
   <button id="setBtn">Set</button>
-  <br>
-  <button id="plusBtn">+1</button>
-  <button id="minusBtn">-1</button>
 </div>
 
 <script>
@@ -67,8 +75,7 @@
   const plusBtn = document.getElementById('plusBtn');
   const minusBtn = document.getElementById('minusBtn');
 
-  // 초기 회원수 설정
-  let count = 7000;
+  let count = 100; // 초기 회원수 설정
 
   updateCounter();
 
