--- a/countnumber.html
+++ b/countnumber.html
@@ -18,19 +18,11 @@
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  #counter-container {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
   }
   #counter {
     font-size: 36px;
+    margin-bottom: 20px;
     color: #333;
-    margin: 0 10px;
   }
   input[type="number"] {
     font-size: 18px;
@@ -43,6 +35,7 @@
   }
   button {
     font-size: 18px;
+    margin-top: 10px;
     padding: 10px 20px;
     cursor: pointer;
     background-color: #555;
@@ -54,24 +47,18 @@
   button:hover {
     background-color: #777;
   }
-  .button-group {
-    display: flex;
-    margin-top: 10px;
-  }
 </style>
 </head>
 <body>
 
 <div class="container">
-  <div id="counter-container">
-    <button id="minusBtn">-1</button>
-    <div id="counter">0</div>
-    <button id="plusBtn">+1</button>
-  </div>
-  <div class="button-group">
-    <input type="number" id="countInput" min="0" value="0">
-    <button id="setBtn">Set</button>
-  </div>
+  <div id="counter">0</div>
+  <input type="number" id="countInput" min="0" value="0">
+  <br>
+  <button id="setBtn">Set</button>
+  <br>
+  <button id="plusBtn">+1</button>
+  <button id="minusBtn">-1</button>
 </div>
 
 <script>
@@ -81,7 +68,8 @@
   const plusBtn = document.getElementById('plusBtn');
   const minusBtn = document.getElementById('minusBtn');
 
-  let count = 100; // 초기 회원수 설정
+  // 초기 회원수 설정
+  let count = 100; // 예시로 100으로 설정
 
   updateCounter();
 
