--- a/countnumber.html
+++ b/countnumber.html
@@ -18,11 +18,19 @@
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  #counter-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
   }
   #counter {
     font-size: 36px;
-    margin-bottom: 20px;
     color: #333;
+    margin: 0 10px;
   }
   input[type="number"] {
     font-size: 18px;
@@ -35,7 +43,6 @@
   }
   button {
     font-size: 18px;
-    margin-top: 10px;
     padding: 10px 20px;
     cursor: pointer;
     background-color: #555;
@@ -47,18 +54,24 @@
   button:hover {
     background-color: #777;
   }
+  .button-group {
+    display: flex;
+    margin-top: 10px;
+  }
 </style>
 </head>
 <body>
 
 <div class="container">
-  <div id="counter">0</div>
-  <input type="number" id="countInput" min="0" value="0">
-  <br>
-  <button id="setBtn">Set</button>
-  <br>
-  <button id="plusBtn">+1</button>
-  <button id="minusBtn">-1</button>
+  <div id="counter-container">
+    <button id="minusBtn">-1</button>
+    <div id="counter">0</div>
+    <button id="plusBtn">+1</button>
+  </div>
+  <div class="button-group">
+    <input type="number" id="countInput" min="0" value="0">
+    <button id="setBtn">Set</button>
+  </div>
 </div>
 
 <script>
@@ -68,8 +81,7 @@
   const plusBtn = document.getElementById('plusBtn');
   const minusBtn = document.getElementById('minusBtn');
 
-  // 초기 회원수 설정
-  let count = 7000; // 예시로 100으로 설정
+  let count = localStorage.getItem('count') ? parseInt(localStorage.getItem('count')) : 0;
 
   updateCounter();
 
@@ -93,6 +105,7 @@
   function updateCounter() {
     counter.textContent = count;
     countInput.value = count;
+    localStorage.setItem('count', count); // 변경된 값 저장
   }
 </script>
 
