--- a/countnumber.html
+++ b/countnumber.html
@@ -44,7 +44,7 @@
     font-size: 18px;
     padding: 10px 20px;
     cursor: pointer;
-    background-color: #ddd;
+    background-color: #bcbcbc;
     color: #fff;
     border: none;
     border-radius: 4px;
