--- a/countnumber.html
+++ b/countnumber.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>회원수 카운팅</title>
+<title>도매 회원 수 카운팅</title>
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -32,11 +32,21 @@
     color: #333;
     margin: 0 10px;
   }
+  #goal {
+    font-size: 24px;
+    color: #555;
+    margin-bottom: 20px;
+  }
+  #percentage {
+    font-size: 20px;
+    color: #777;
+  }
   input[type="number"] {
     font-size: 18px;
     padding: 10px;
     text-align: center;
     width: 80px;
+    margin-bottom: 20px;
     border: 1px solid #ddd;
     border-radius: 4px;
   }
@@ -44,7 +54,7 @@
     font-size: 18px;
     padding: 10px 20px;
     cursor: pointer;
-    background-color: #bcbcbc;
+    background-color: #555;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -64,13 +74,15 @@
 <div class="container">
   <div id="counter-container">
     <button id="minusBtn">-1</button>
-    <div id="counter">7000</div>
+    <div id="counter">0</div>
     <button id="plusBtn">+1</button>
   </div>
   <div class="button-group">
     <input type="number" id="countInput" min="0" value="0">
     <button id="setBtn">Set</button>
   </div>
+  <div id="goal">목표 도매 회원 수: <span id="goalCount">100</span></div>
+  <div id="percentage">목표 달성률: <span id="percentageCount">0%</span></div>
 </div>
 
 <script>
@@ -79,21 +91,27 @@
   const setBtn = document.getElementById('setBtn');
   const plusBtn = document.getElementById('plusBtn');
   const minusBtn = document.getElementById('minusBtn');
+  const goalCount = document.getElementById('goalCount');
+  const percentageCount = document.getElementById('percentageCount');
 
   let count = localStorage.getItem('count') ? parseInt(localStorage.getItem('count')) : 0;
+  let goal = localStorage.getItem('goal') ? parseInt(localStorage.getItem('goal')) : 100; // 목표 도매 회원 수
 
   updateCounter();
+  updatePercentage();
 
   setBtn.addEventListener('click', () => {
     count = parseInt(countInput.value) || 0;
     updateCounter();
     localStorage.setItem('count', count); // 변경된 값 저장
+    updatePercentage();
   });
 
   plusBtn.addEventListener('click', () => {
     count++;
     updateCounter();
     localStorage.setItem('count', count); // 변경된 값 저장
+    updatePercentage();
   });
 
   minusBtn.addEventListener('click', () => {
@@ -101,12 +119,18 @@
       count--;
       updateCounter();
       localStorage.setItem('count', count); // 변경된 값 저장
+      updatePercentage();
     }
   });
 
   function updateCounter() {
     counter.textContent = count;
     countInput.value = count;
+  }
+
+  function updatePercentage() {
+    const percentage = (count / goal) * 100;
+    percentageCount.textContent = `${percentage.toFixed(2)}%`;
   }
 </script>
 
