--- a/countnumber.html
+++ b/countnumber.html
@@ -19,14 +19,17 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 30px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
   }
   .info-container {
     margin-bottom: 20px;
   }
   #counter-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     margin-bottom: 20px;
   }
@@ -68,7 +71,7 @@
   </div>
   <div class="info-container" id="goalMembers">
     <h3>목표 도매 회원 수</h3>
-    <span id="goalCount">100</span>
+    <input type="number" id="goalCount" min="0" value="100">
   </div>
   <div class="info-container" id="completionRate">
     <h3>목표 달성률</h3>
@@ -88,7 +91,7 @@
   const setBtn = document.getElementById('setBtn');
   const plusBtn = document.getElementById('plusBtn');
   const minusBtn = document.getElementById('minusBtn');
-  const goalCount = document.getElementById('goalCount');
+  const goalCountInput = document.getElementById('goalCount');
   const percentageCount = document.getElementById('percentageCount');
 
   let count = localStorage.getItem('count') ? parseInt(localStorage.getItem('count')) : 0;
@@ -118,6 +121,12 @@
       localStorage.setItem('count', count);
       updatePercentage();
     }
+  });
+
+  goalCountInput.addEventListener('change', () => {
+    goal = parseInt(goalCountInput.value) || 0;
+    localStorage.setItem('goal', goal);
+    updatePercentage();
   });
 
   function updateCounter() {
