--- a/countnumber.html
+++ b/countnumber.html
@@ -86,10 +86,6 @@
 <script>
 const counterInput = document.getElementById('counterInput');
 const setCounterBtn = document.getElementById('setCounterBtn');
-const countInput = document.getElementById('countInput'); // 수정된 부분
-const setBtn = document.getElementById('setBtn'); // 수정된 부분
-const plusBtn = document.getElementById('plusBtn'); // 수정된 부분
-const minusBtn = document.getElementById('minusBtn'); // 수정된 부분
 const goalCount = document.getElementById('goalCount');
 const setGoalBtn = document.getElementById('setGoalBtn');
 const percentageCount = document.getElementById('percentageCount');
@@ -100,7 +96,7 @@ let goal = localStorage.getItem('goal') ? parseInt(localStorage.getItem('goal'))
 updateCounter();
 updatePercentage();
 
-setCounterBtn.addEventListener('click', () => { // 수정된 부분
+setCounterBtn.addEventListener('click', () => {
   count = parseInt(counterInput.value) || 0;
   updateCounter();
   localStorage.setItem('count', count);
@@ -114,7 +110,6 @@ setGoalBtn.addEventListener('click', () => {
 });
 
 function updateCounter() {
-  counter.textContent = count; // 수정된 부분
   counterInput.value = count;
 }
 
