--- a/countnumber.html
+++ b/countnumber.html
@@ -116,7 +116,7 @@ function updateCounter() {
 }
 
 function updateGoalCounter() {
-  goalCount.value = count;
+  goalCount.value = goal;
 }
 
 function updatePercentage() {
